# GuiMacro

./: .gitignore  README.md  push  pyproject.toml
src/guimacro/: __init__.py  base.py  kakao.py
