[tool.poetry]
name = "guimacro"
version = "0.1.0"
description = ""
authors = ["mdvtkr"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.12"
pyautogui = {git = "https://github.com/mdvtkr/pyautogui.git"}
pyperclip = "^1.8.2"
pysftp = "^0.2.9"
build = "^1.0.3"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
